{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 20,
  "lineage": "c69c90c7-882e-6f2a-94b4-e658acd69933",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "keethu-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0830d6a41c0a8d5b7",
            "arn": "arn:aws:ec2:us-west-2:888577023923:elastic-ip/eipalloc-0830d6a41c0a8d5b7",
            "association_id": "eipassoc-0af1a153a21c14725",
            "domain": "vpc",
            "id": "eipalloc-0830d6a41c0a8d5b7",
            "network_border_group": "us-west-2",
            "network_interface": "eni-06b080ea0bcffca56",
            "private_dns": "ip-10-0-0-16.us-west-2.compute.internal",
            "private_ip": "10.0.0.16",
            "public_dns": "ec2-44-238-75-4.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.75.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055e3d4f0bbeb5878",
            "arn": "arn:aws:ec2:us-west-2:888577023923:instance/i-03837d5a102b72074",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03837d5a102b72074",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098514893d5453afe",
            "private_dns": "ip-10-0-0-59.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.59",
            "public_ip": "35.166.237.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04b9638679c5cacab",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbb460fa90cee8c9",
            "tags": {
              "Name": "keerthi"
            },
            "tags_all": {
              "Name": "keerthi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03132a1f2fa56b6d0"
            ]
          },
          "dependencies": [
            "aws_key_pair.name",
            "aws_security_group.keethu-sg",
            "aws_subnet.keethu-sb",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "keethu-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:888577023923:internet-gateway/igw-028f08e2e4e6e4d81",
            "id": "igw-028f08e2e4e6e4d81",
            "owner_id": "888577023923",
            "tags": {
              "Name": "ig"
            },
            "tags_all": {
              "Name": "ig"
            },
            "vpc_id": "vpc-0fa785d4bf6f5fe30"
          },
          "dependencies": [
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "keethu-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0830d6a41c0a8d5b7",
            "association_id": "eipassoc-0af1a153a21c14725",
            "connectivity_type": "public",
            "id": "nat-0d73344a9ed7a1025",
            "network_interface_id": "eni-06b080ea0bcffca56",
            "private_ip": "10.0.0.16",
            "public_ip": "44.238.75.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fbb460fa90cee8c9",
            "tags": {
              "Name": "keethu-nat"
            },
            "tags_all": {
              "Name": "keethu-nat"
            }
          },
          "dependencies": [
            "aws_eip.keethu-eip",
            "aws_subnet.keethu-sb",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "keethu-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:888577023923:route-table/rtb-08bddbaed35f5ded0",
            "id": "rtb-08bddbaed35f5ded0",
            "owner_id": "888577023923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d73344a9ed7a1025",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-k-private-rt"
            },
            "tags_all": {
              "Name": "project-k-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa785d4bf6f5fe30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.keethu-eip",
            "aws_nat_gateway.keethu-nat",
            "aws_subnet.keethu-sb",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "keethu-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:888577023923:route-table/rtb-072a35e704f513ee4",
            "id": "rtb-072a35e704f513ee4",
            "owner_id": "888577023923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028f08e2e4e6e4d81",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-k-rt"
            },
            "tags_all": {
              "Name": "project-k-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa785d4bf6f5fe30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.keethu-ig",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "keethu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002f233dd83b25751",
            "route_table_id": "rtb-072a35e704f513ee4",
            "subnet_id": "subnet-0fbb460fa90cee8c9"
          },
          "dependencies": [
            "aws_internet_gateway.keethu-ig",
            "aws_route_table.keethu-route",
            "aws_subnet.keethu-sb",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01349904ca8625d97",
            "route_table_id": "rtb-08bddbaed35f5ded0",
            "subnet_id": "subnet-0df1cd287a7fd7bf9"
          },
          "dependencies": [
            "aws_eip.keethu-eip",
            "aws_nat_gateway.keethu-nat",
            "aws_route_table.keethu-private-route",
            "aws_subnet.keethu-sb",
            "aws_subnet.keethu-sb-prvt",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "keethu-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:888577023923:security-group/sg-03132a1f2fa56b6d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03132a1f2fa56b6d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow all traffic",
            "name_prefix": "",
            "owner_id": "888577023923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-project-k"
            },
            "tags_all": {
              "Name": "sg-project-k"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa785d4bf6f5fe30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "keethu-sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:888577023923:subnet/subnet-0fbb460fa90cee8c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb460fa90cee8c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888577023923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-k-subnet"
            },
            "tags_all": {
              "Name": "project-k-subnet"
            },
            "vpc_id": "vpc-0fa785d4bf6f5fe30"
          },
          "dependencies": [
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "keethu-sb-prvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:888577023923:subnet/subnet-0df1cd287a7fd7bf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df1cd287a7fd7bf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888577023923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-k- prvt-subnet"
            },
            "tags_all": {
              "Name": "project-k- prvt-subnet"
            },
            "vpc_id": "vpc-0fa785d4bf6f5fe30"
          },
          "dependencies": [
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "keethu-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:888577023923:vpc/vpc-0fa785d4bf6f5fe30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0069063e278b76a6f",
            "default_route_table_id": "rtb-0ecae084740ba2f22",
            "default_security_group_id": "sg-090829bff4807add5",
            "dhcp_options_id": "dopt-05e899648ae9eb08e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa785d4bf6f5fe30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ecae084740ba2f22",
            "owner_id": "888577023923",
            "tags": {
              "Name": "project-k-vpc"
            },
            "tags_all": {
              "Name": "project-k-vpc"
            }
          }
        }
      ]
    }
  ]
}